fix image line and text overlap

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -269,10 +269,6 @@ i {
     font-size: 1rem;
   }
 
-  .h-img-md {
-    height: 60%;
-  }
-
   .debate-container,
   .featured-stories {
     position: sticky;
